# go-fetch

./: .env.example  .gitignore  CLAUDE.md  README.md  eslint.config.js  jest.config.js  nodemon.json  package-lock.json  package.json  tsconfig.json  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml
eval/: README.md
graph-algos/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
graph-algos/examples/: api_client.py  community_analysis.py  run_pagerank.py
graph-algos/src/graph_algos/: __init__.py  cli.py
graph-algos/src/graph_algos/algorithms/: __init__.py  base.py  centrality.py  community.py  graph_builder.py
graph-algos/src/graph_algos/api/: __init__.py  server.py
graph-algos/src/graph_algos/core/: __init__.py  config.py  dgraph_client.py  logger.py
graph-algos/src/graph_algos/schedulers/: __init__.py  periodic_runner.py
img/arrows/: fetch-schema.json
img/excalidraw/: go-fetch-arch.excalidraw
scripts/: README.md  ingest-locomo.js  ingest-locomo.ts
src/: index.ts  test-setup.ts
src/__tests__/lib/: ai.test.ts  database-factory.test.ts  dgraph.test.ts  neo4j.test.ts
src/__tests__/tools/: graph-memory-search.test.ts  save-user-message.test.ts
src/lib/: ai.ts  database-factory.ts  database-interface.ts  dgraph.ts  neo4j.ts
src/test-fixtures/: test-data.ts
src/tools/: graph-memory-search.ts  save-user-message.ts
src/types/: index.ts
tests/: setup.ts
tests/fixtures/: test-data.ts
tests/integration/: mcp-server.test.ts
tests/mocks/: ai.mock.ts  dgraph.mock.ts
